--- a/.devcontainer/cuda12.6-gcc13/devcontainer.json
+++ b/.devcontainer/cuda12.6-gcc13/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "shutdownAction": "stopContainer",
-  "image": "rapidsai/devcontainers:24.06-cpp-gcc12-cuda12.4-ubuntu22.04",
+  "image": "rapidsai/devcontainers:24.12-cpp-gcc13-cuda12.6-ubuntu22.04",
   "hostRequirements": {
     "gpu": true
   },
@@ -12,12 +12,12 @@
   "containerEnv": {
     "SCCACHE_REGION": "us-east-2",
     "SCCACHE_BUCKET": "rapids-sccache-devs",
-    "VAULT_HOST": "https://vault.ops.k8s.rapids.ai",
+    "AWS_ROLE_ARN": "arn:aws:iam::279114543810:role/nv-gha-token-sccache-devs",
     "HISTFILE": "${containerWorkspaceFolder}/.cache/._bash_history",
-    "DEVCONTAINER_NAME": "cuda12.4-gcc12",
-    "CUCO_CUDA_VERSION": "12.4",
+    "DEVCONTAINER_NAME": "cuda12.6-gcc13",
+    "CUCO_CUDA_VERSION": "12.6",
     "CUCO_HOST_COMPILER": "gcc",
-    "CUCO_HOST_COMPILER_VERSION": "12"
+    "CUCO_HOST_COMPILER_VERSION": "13"
   },
   "workspaceFolder": "/home/coder/${localWorkspaceFolderBasename}",
   "workspaceMount": "source=${localWorkspaceFolder},target=/home/coder/${localWorkspaceFolderBasename},type=bind,consistency=consistent",
@@ -38,5 +38,5 @@
       }
     }
   },
-  "name": "cuda12.4-gcc12"
+  "name": "cuda12.6-gcc13"
 }
