Add `find` APIs for the new `static_multimap` (#626)
This PR adds host and device `find` APIs for the new multimap.

---------

Co-authored-by: Daniel Jünger <djuenger@nvidia.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -114,6 +114,7 @@ ConfigureTest(STATIC_MULTIMAP_TEST
     static_multimap/count_test.cu
     static_multimap/custom_pair_retrieve_test.cu
     static_multimap/custom_type_test.cu
+    static_multimap/find_test.cu
     static_multimap/heterogeneous_lookup_test.cu
     static_multimap/insert_contains_test.cu
     static_multimap/insert_if_test.cu
