Add consistent `for_each` APIs for cuco hash tables (#632)
This PR adds host and device `for_each` APIs for all cuco hash tables.

---------

Co-authored-by: Daniel Jünger <djuenger@nvidia.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -60,6 +60,7 @@ ConfigureTest(UTILITY_TEST
 # - static_set tests ------------------------------------------------------------------------------
 ConfigureTest(STATIC_SET_TEST
     static_set/capacity_test.cu
+    static_set/for_each_test.cu
     static_set/heterogeneous_lookup_test.cu
     static_set/insert_and_find_test.cu
     static_set/large_input_test.cu
