Migrate set retrieve to use the OA implementation (#637)
This PR updates the legacy set retrieve to use the new open-addressing
solution. It enhances open-addressing retrieve by eliminating the use of
coalesced groups to reduce register pressure, resulting in approximately
10% to 40% speedups in multiset retrieve benchmarks.

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Daniel Jünger <djuenger@nvidia.com>

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -52,6 +52,7 @@ ConfigureBench(STATIC_SET_BENCH
   static_set/contains_bench.cu
   static_set/find_bench.cu
   static_set/insert_bench.cu
+  static_set/retrieve_bench.cu
   static_set/retrieve_all_bench.cu
   static_set/size_bench.cu
   static_set/rehash_bench.cu)
